# pyqt-polynomial-solver

./: README.md  pyproject.toml  scripts.py
py_polynomial_solver/: main.py  test.py
py_polynomial_solver/controller/: polynomial_parser.py
py_polynomial_solver/model/: equation.py  polynomial.py
py_polynomial_solver/view/: math_text_label.py  polynomial_editor_dialog.py
resources/: polynomialeditor_dialog.ui
tests/: test_py_polynomial_solver.py
